--- a/typescript_udemy/ts-compiler-section/index.html
+++ b/typescript_udemy/ts-compiler-section/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Title</title>
-    <script src="dist/app.js" defer></script>
-    <script src="dist/generics.js" defer></script>
+    <!--    <script src="dist/app.js" defer></script>-->
+    <!--    <script src="dist/generics.js" defer></script>-->
+    <script src="dist/autobind.js" defer></script>
+    <script src="dist/validation.js" defer></script>
   </head>
   <body>
     <div>
       <input type="text" id="input-user" />
+      <div id="decorators-hook"></div>
     </div>
   </body>
 </html>
